Update Swagger, Fix Route auth, Fix Query,  Add error route
